--- a/src/com/jstore/views/VentasView.form
+++ b/src/com/jstore/views/VentasView.form
@@ -91,7 +91,7 @@
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="301" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -190,7 +190,7 @@
                       <Component id="totalTxt" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="guardarButton" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="64" max="32767" attributes="0"/>
+                  <EmptySpace pref="85" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -281,40 +281,26 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="nombreClienteTxt" min="-2" pref="174" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="buscarClienteButton" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="365" max="32767" attributes="0"/>
+                  <Component id="txtCliente" min="-2" pref="159" max="-2" attributes="0"/>
+                  <EmptySpace pref="442" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="nombreClienteTxt" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="buscarClienteButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace pref="14" max="32767" attributes="0"/>
-              </Group>
+              <Component id="txtCliente" min="-2" max="-2" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="org.jdesktop.swingx.JXTextField" name="nombreClienteTxt">
+        <Component class="javax.swing.JTextField" name="txtCliente">
           <Properties>
-            <Property name="text" type="java.lang.String" resourceKey="nombreClienteTxt.text"/>
-            <Property name="name" type="java.lang.String" value="nombreClienteTxt" noResource="true"/>
+            <Property name="text" type="java.lang.String" resourceKey="txtCliente.text"/>
+            <Property name="name" type="java.lang.String" value="txtCliente" noResource="true"/>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nombreClienteTxtActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="org.jdesktop.swingx.JXButton" name="buscarClienteButton">
-          <Properties>
-            <Property name="text" type="java.lang.String" resourceKey="buscarClienteButton.text"/>
-            <Property name="name" type="java.lang.String" value="buscarClienteButton" noResource="true"/>
-          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new EntityJTextField()"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
